panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_ptr_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_deref.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `long` 42)
         (declaration p~3 `ptr<long>` (addressof (name x~2 `long`)))
         (declaration pp~4 `ptr<ptr<long>>` (addressof (name p~3 `ptr<long>`)))
         (return (deref (deref (name pp~4 `ptr<ptr<long>>`)))))))

----- stderr -----
