panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_return_27.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_return_27.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> Int`
      (compound-statement
         (return 27))))

----- stderr -----
