panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_return_multiple_local_variables_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_return_multiple_local_variables_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_multiple_local_variables_in_main.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 27)
         (declaration b~3 `int` 42)
         (expression 123)
         (return (name b~3 `int`)))))

----- stderr -----
