panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_subtraction.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_subtraction.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_subtraction.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (declaration b~3 `char` 42)
         (return (subtract (name b~3 `char`) (name a~2 `int`))))))

----- stderr -----
